# mini_bitly

./: .gitignore  Dockerfile  README.md  SCALABILITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/: alembic.ini
src/app/: main.py
src/app/api/: dependencies.py
src/app/api/v1/: __init__.py  urls.py
src/app/core/: config.py
src/app/core/db/: database.py
src/app/decorators/: log_stats.py
src/app/models/: __init__.py  url.py
src/app/schemas/: url.py
src/app/services/: url_service.py
src/migrations/: env.py
src/migrations/versions/: c6cfb87d7ecb_initial_migration.py
